--- a/projects/3/package.json
+++ b/projects/3/package.json
@@ -7,10 +7,23 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    "> 1%"
+  ],
   "devDependencies": {
-    "json-server": "^0.17.0"
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "babel": "^6.23.0",
+    "babel-loader": "^8.2.5",
+    "core-js": "^3.24.1",
+    "json-server": "^0.17.0",
+    "loader": "^2.1.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "accepts": "^1.3.8",
     "ansi-align": "^3.0.1",
     "ansi-regex": "^5.0.1",
