--- a/projects/5/.gitignore
+++ b/projects/5/.gitignore
@@ -1,12 +1,9 @@
-# depend/node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
 /node_modules
-node_modules
-/react-sandbox
-/sandbox
 /.pnp
 .pnp.js
-/pet
-pet
 
 # testing
 /coverage
